added a hay fever artical and coninued with nerdy tourist

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,14 @@
 {
     "cSpell.words": [
         "Akinator",
+        "Allerstop",
+        "ASML",
+        "cetirizine",
         "chatgpt",
+        "Etos",
+        "Hooikoortstabletten",
+        "Nasonex",
+        "Prevalin",
         "rosbridge",
         "Westerbork"
     ]
