--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "chatgpt",
         "Etos",
         "Hooikoortstabletten",
+        "Kyteman",
         "mometasone",
         "Nasonex",
         "Prevalin",
