wrote notes about osrs-db

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,11 @@
         "Kyteman",
         "mometasone",
         "Nasonex",
+        "osrs",
         "Prevalin",
         "rosbridge",
+        "runelite",
+        "Runescape",
         "Westerbork"
     ],
     "cSpell.language": "en,nl",
