--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "chatgpt",
         "Etos",
         "Hooikoortstabletten",
+        "hutspotgroenten",
         "Kyteman",
         "Mapillary",
         "mometasone",
