Add automatic template generation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Mapillary",
         "mometasone",
         "Nasonex",
+        "openai",
         "osrs",
         "overpassql",
         "Prevalin",
