--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "ASML",
         "cetirizine",
         "chatgpt",
+        "Defqon",
         "Etos",
         "Hooikoortstabletten",
         "hutspotgroenten",
