--- a/.github/workflows/DailyTemplate.yml
+++ b/.github/workflows/DailyTemplate.yml
@@ -23,7 +23,7 @@ jobs:
         cache-dependency-path: ./Journal/Template/package-lock.json
     - run: npm install
     - name: Generate Daily Template
-      run: npm run generate
+      run: npm run daily
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
     - uses: EndBug/add-and-commit@v9
