upload more stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
         "rosbridge",
         "runelite",
         "Runescape",
+        "Saemangeum",
         "Westerbork",
         "wikidata"
     ],
