Add new source to VSCode settings, update WeeklyTemplate workflow, and fix typos in various markdown files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "osrs",
         "overpassql",
         "Prevalin",
+        "reprojection",
         "rosbridge",
         "runelite",
         "Runescape",
