--- a/.github/workflows/WeeklyTemplate.yml
+++ b/.github/workflows/WeeklyTemplate.yml
@@ -1,8 +1,8 @@
 name: Weekly Template
 
 on:
-  schedule:
-  - cron: "5 12 * * 0"
+  # schedule:
+  # - cron: "5 12 * * 0"
   workflow_dispatch:
 
 jobs:
