update CWO documentation, add new resources, and correct typos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,7 +24,8 @@
         "Runescape",
         "Saemangeum",
         "Westerbork",
-        "wikidata"
+        "wikidata",
+        "youtube"
     ],
     "cSpell.language": "en,nl,en-GB",
     "editor.formatOnSave": true,
